sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/APTemplateTask__c.object-meta.xml
<CustomObject>
    <description>Action Plan Template Task - belongs to Action Plan Template</description>
    <label>ActionPlanTemplate Task</label>
    <nameField>
        <label>Action Plan Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActionPlanTemplate Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>