sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
	<description>The parent Action Plan Template</description>
    <relationshipLabel>Action Plan Template Tasks</relationshipLabel>
    <relationshipName>aptTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>