sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Comments__c.field-meta.xml
<CustomField>
	<fullName>Comments__c</fullName>
	<label>Comments</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>