sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/DaysFromStart__c.field-meta.xml
<CustomField>
	<fullName>DaysFromStart__c</fullName>
	<inlineHelpText>This value determines the due date of the task. For tasks with no dependency, the task&apos;s due date will be offset from the plan start date. For tasks with a dependency, the due date will be offset from the expected due date of the task on which it depends.</inlineHelpText>
	<label>Days After</label>
	<precision>3</precision>
	<description>How many days from the plan start date or due date of the controlling task will this task be due?</description>
	<scale>0</scale>
	<type>Number</type>
</CustomField>