sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Minutes_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Reminder__c</fullName>
    <inlineHelpText>Minutes after midnight to show Task reminder</inlineHelpText>
    <label>Minutes Reminder</label>
    <length>4</length>
    <type>Text</type>
</CustomField>