sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Priority__c.field-meta.xml
<CustomField>
	<fullName>Priority__c</fullName>
	<label>Priority</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>High</fullName>
				
				<label>High</label>
			</value>
			<value>
				<fullName>Normal</fullName>
				
				<default>true</default>
				<label>Normal</label>
			</value>
			<value>
				<fullName>Low</fullName>
				
				<label>Low</label>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>