sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/SendEmail__c.field-meta.xml
<CustomField>
	<fullName>SendEmail__c</fullName>
	<defaultValue>false</defaultValue>
	<description>Send email notification when a Task is created.</description>
	<label>Send Email</label>
	<type>Checkbox</type>
</CustomField>