sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Subject__c.field-meta.xml
<CustomField>
	<fullName>Subject__c</fullName>
	<label>Subject</label>
	<description>Task Subject</description>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>