sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/TController__c.field-meta.xml
<CustomField>
    <fullName>TController__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Controlling template task for this template task</description>
    <label>Controlling Task</label>
    <referenceTo>APTemplateTask__c</referenceTo>
    <relationshipLabel>Dependent APT Tasks</relationshipLabel>
    <relationshipName>Dependent_APT_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>