sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Time_Reminder__c.field-meta.xml
<CustomField>
	<fullName>Time_Reminder__c</fullName>
	<formula>IF(Reminder__c &amp;&amp; !ISBLANK(Minutes_Reminder__c), 
    IF(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(Minutes_Reminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(Minutes_Reminder__c) ,60)))+&apos; &apos;+ IF( VALUE(Minutes_Reminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),

&apos;&apos;)</formula>
	<label>Time Reminder</label>
	<type>Text</type>
</CustomField>