sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<label>Task Type</label>
	<length>255</length>
	<description>Task Type</description>
	<type>Text</type>
</CustomField>